--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.jpa.generate-ddl=true
 spring.jpa.database=postgresql
-spring.datasource.url=${POSTGRESURL}
+spring.datasource.url=jdbc:postgresql://${POSTGRESHOST}:${POSTGRESPORT}/${POSTGRESDATABASE}
 spring.datasource.username=${POSTGRESUSER}
 spring.datasource.password=${POSTGRESPASSWORD}
 
